--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,21 +1,21 @@
 ## CHANGE this to the name of your plugin.
-name: SlimefunAddon
+name: transmorph
 
 ## CHANGE this to your username.
-author: CHANGEME
+author: AAAAA30
 
 ## CHANGE this to a meaninful but short description of your plugin.
-description: A generic Slimefun4-Addon
+description: project e for slimefun
 
 ## CHANGE this to the path of the class that extends JavaPlugin.
-main: me.CHANGEME.slimefunaddon.ExampleAddon
+main: me.aaaaa30.transmorph
 
 ## You can change this to link to your website or repository. You can also remove this line if you want to.
 website: https://github.com/Slimefun/Addon-Template
 
 ## This value is automatically replaced by the version specified in your pom.xml file.
 ## Do not change this.
-version: ${project.version}
+version: 1.0
 
 ## This is the minimum minecraft version required to run your plugin.
 api-version: 1.14
